@@ -26,7 +26,7 @@ public record CountCollectionOperation(
   public Uni<Supplier<CommandResult>> execute(
       RequestContext dataApiRequestInfo, QueryExecutor queryExecutor) {
     SimpleStatement simpleStatement = buildSelectQuery();
-    Uni<CountResponse> countResponse = null;
+    Uni<CountResponse> countResponse;
     if (limit == -1)
       countResponse = countDocuments(dataApiRequestInfo, queryExecutor, simpleStatement);
     else countResponse = countDocumentsByKey(dataApiRequestInfo, queryExecutor, simpleStatement);
@@ -48,7 +48,7 @@ public record CountCollectionOperation(
   private SimpleStatement buildSelectQuery() {
     final List<Expression<BuiltCondition>> expressions =
         ExpressionBuilder.buildExpressions(dbLogicalExpression, null);
-    Query query = null;
+    Query query;
     if (limit == -1) {
       query =
           new QueryBuilder()
@@ -58,7 +58,7 @@ public record CountCollectionOperation(
               .from(
                   commandContext.schemaObject().name().keyspace(),
                   commandContext.schemaObject().name().table())
-              .where(expressions.get(0))
+              .where(expressions.getFirst())
               .build();
     } else {
       query =
@@ -68,7 +68,7 @@ public record CountCollectionOperation(
               .from(
                   commandContext.schemaObject().name().keyspace(),
                   commandContext.schemaObject().name().table())
-              .where(expressions.get(0))
+              .where(expressions.getFirst())
               .limit(limit + 1)
               .build();
     }
